--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,12 @@
-@import "./base.css";
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+:root{
+    --color-background: #0F3460;
+    --color-background-dark: #000f22;
+    --color-background-dark-hover: #022553;
+    --color-text-light: #ffffff;
+    --color-pink: #E94560;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+body{
+    background-color: var(--color-background);
+    color: var(--color-text-light);
 }
