--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,10 @@
 :root{
     --color-background: #0F3460;
-    --color-background-dark: #000f22;
+    --color-background-dark: #000F22;
     --color-background-dark-hover: #022553;
-    --color-text-light: #ffffff;
+    --color-text-light: #FFFFFF;
     --color-pink: #E94560;
+    --color-cream: #F9F9F9;
 }
 
 body{
