update navbar and background-color

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Jost:wght@400;700;800&display=swap');
 
 :root{
-    --color-background: #0F3460;
+    --color-background: #16213E;
     --color-background-dark: #000F22;
     --color-background-dark-hover: #022553;
     --color-text-light: #FFFFFF;
