--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
     --color-cream: #F9F9F9;
+    --color-textonwhite: #16213E;
 }
 
 body{
