--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -6,6 +6,8 @@
     --color-pink: #E94560;
     --color-cream: #F9F9F9;
     --color-textonwhite: #16213E;
+    --color-light-blue:#375E97;
+    --color-purple:#533483;
 }
 
 body{
