minor changes in home

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -6,6 +6,7 @@
     --color-background-dark-hover: #022553;
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
+    --color-translucent-pink: #E9456081;
     --color-cream: #F9F9F9;
 
 }
