--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --color-background: #0F3460;
     --color-background-dark: #000F22;
     --color-background-dark-hover: #022553;
@@ -9,8 +9,8 @@
     --color-light-blue:#375E97;
     --color-purple:#533483;
 }
-
+/* 
 body{
     background-color: var(--color-background);
     color: var(--color-text-light);
-}
+} */ 
