--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -25,6 +25,8 @@ body{
     background: radial-gradient(#0F3460, #071c35);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    height: 100%;
+    min-height: 100%;
     color: var(--color-text-light);
 }
 
