Search bar logic

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -8,6 +8,7 @@
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
     --color-cream: #F9F9F9;
+    --color-cream-hover: #dfdfdf;
     --color-textonwhite: #16213E;
     --color-light-blue:#375E97;
     --color-purple:#533483;
