criação da sidebar

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -5,6 +5,7 @@
     --color-background: #0F3460;
     --color-background-dark: #000F22;
     --color-background-dark-hover: #022553;
+    --color-background-dark-hover-hover: #083166;
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
     --color-cream: #F9F9F9;
