search page init

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -8,6 +8,7 @@
     --color-background-dark-hover-hover: #083166;
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
+    --color-translucent-pink: #E9456081;
     --color-cream: #F9F9F9;
     --color-cream-hover: #dfdfdf;
     --color-textonwhite: #16213E;
