new imagecard few adjusts

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -9,6 +9,7 @@
     --color-text-light: #FFFFFF;
     --color-pink: #E94560;
     --color-translucent-pink: #E9456081;
+    --color-translucenter-pink: #e945607a;
     --color-cream: #F9F9F9;
     --color-cream-hover: #dfdfdf;
     --color-textonwhite: #16213E;
